@@ -16,6 +16,9 @@ BUG FIXES
 
 * `**ply` now works when passed a list of functions
 
+* `a*ply` now correctly works with zero length margins, operating on the
+  entire object
+
 * `join` now implements joins in a more SQL like way, returning all possible
   matches, not just the first one. It is still a (little) faster than merge.
   The previous behaviour is accessible with `match = "first"`.
